force-app/main/default/objects/Case/fields/Billed__c.field-meta.xml
<CustomField>
    <fullName>Billed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether a Bill has been sent for this or not</description>
    <inlineHelpText>Whether a Bill has been sent for this or not</inlineHelpText>
    <label>Billed</label>
    <type>Checkbox</type>
</CustomField>