force-app/main/default/objects/Case/fields/Case_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Type_Name__c</fullName>
    <description>Record Type name text.</description>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Record Type Name</label>
    <type>Text</type>
</CustomField>