force-app/main/default/objects/Case/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>Used to define the requirements and solution of the case</description>
    <inlineHelpText>Used to define the requirements and solution of the case</inlineHelpText>
    <label>Summary</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>