force-app/main/default/objects/Case/fields/Total_Consulting_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Consulting_Value__c</fullName>
    <description>Value from this ticket</description>
    <formula>(Total_Minutes_Worked__c / 60) * Opportunity__r.Hourly_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Value from this ticket</inlineHelpText>
    <label>Total Consulting Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>