force-app/main/default/objects/Case/fields/Total_Minutes_Worked__c.field-meta.xml
<CustomField>
    <fullName>Total_Minutes_Worked__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total minutes worked on the case</description>
    <inlineHelpText>Total minutes worked on the case</inlineHelpText>
    <label>Total Minutes Worked</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>