force-app/main/default/objects/Case/recordTypes/Canon_Connect.recordType-meta.xml
<RecordType>
    <fullName>Canon_Connect</fullName>
    <active>true</active>
    <businessProcess>Canon Connect</businessProcess>
    <label>Canon Connect</label>
</RecordType>