force-app/main/default/objects/Case/listViews/Canon_Connect_Emails_Case.listView-meta.xml
<ListView>
    <fullName>Canon_Connect_Emails_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Canon Connect Emails</label>
    <queue>Canon_Connect_Emails</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>